--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <A HREF="https://www.ebiografia.com/leonardo_fibonacci/
-"><IMG SRC="fibonacci.JPG" ALIGN="TOP"></A> 
+"><IMG SRC="imagens.JPG" ALIGN="TOP"></A> 
 
 <hr>
 <h2>
